<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalAmountTitle"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalAmount"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/paymentsTitle"
        android:layout_height="wrap_content"
        android:text="@string/payments_title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_width="wrap_content"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/paymentsChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:singleSelection="false" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addPaymentButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_payment"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_medium"
        android:layout_width="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/save" />
</LinearLayout>